simple ship placement in the works - added modal.js - added incomplete ship placement

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>Battleship</title>
 	</head>
-	<body></body>
+	<body>
+		<main class="gameContainer"></main>
+	</body>
 </html>
