changed theme and colors - changed theme to a kinda futuristic theme - ships are no longer white boxes with their type inside - added miniCssExtractPlugin to webpack - Added header title to page

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 		<title>Battleship</title>
 	</head>
 	<body>
+		<h1 class="header">BATTLESHIP: ONLINE</h1>
 		<main class="gameContainer"></main>
 	</body>
 </html>
